@@ -6,7 +6,11 @@ import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.ewm.event.model.Event;
 import ru.practicum.ewm.event.model.EventState;
 import ru.practicum.ewm.event.repository.EventRepository;
+import ru.practicum.ewm.exceptions.ConflictException;
+import ru.practicum.ewm.exceptions.NotFoundException;
 import ru.practicum.ewm.request.dto.ParticipationRequestDto;
+import ru.practicum.ewm.request.dto.RequestStatusUpdateDto;
+import ru.practicum.ewm.request.dto.RequestStatusUpdateResult;
 import ru.practicum.ewm.request.mapper.RequestMapper;
 import ru.practicum.ewm.request.model.ParticipationRequest;
 import ru.practicum.ewm.request.model.RequestStatus;
@@ -15,9 +19,9 @@ import ru.practicum.ewm.user.model.User;
 import ru.practicum.ewm.user.repository.UserRepository;
 
 import java.time.LocalDateTime;
+import java.time.temporal.ChronoUnit;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,6 +32,36 @@ public class ParticipationRequestServiceImpl implements ParticipationRequestServ
     private final EventRepository eventRepository;
     private final UserRepository userRepository;
 
+    private User getUser(Long userId) {
+        return userRepository.findById(userId)
+                .orElseThrow(() -> new NotFoundException("User not found"));
+    }
+
+    private Event getEvent(Long eventId) {
+        return eventRepository.findById(eventId)
+                .orElseThrow(() -> new NotFoundException("Event not found"));
+    }
+
+    private void requireInitiator(Event event, Long userId, String action) {
+        if (!event.getInitiator().getId().equals(userId)) {
+            throw new ConflictException("Only initiator can " + action);
+        }
+    }
+
+    private void refreshConfirmedCount(Event event) {
+        long confirmed = requestRepository.countByEventAndStatus(event, RequestStatus.CONFIRMED);
+        event.setConfirmedRequests(confirmed);
+        eventRepository.save(event);
+    }
+
+    private RequestStatus parseBulkStatus(String raw) {
+        try {
+            return RequestStatus.valueOf(raw.toUpperCase());
+        } catch (Exception ex) {
+            throw new ConflictException("Unknown status: " + raw);
+        }
+    }
+
     @Override
     @Transactional
     public ParticipationRequestDto create(Long userId, Long eventId) {
@@ -35,24 +69,28 @@ public class ParticipationRequestServiceImpl implements ParticipationRequestServ
         Event event = getEvent(eventId);
 
         if (event.getInitiator().getId().equals(userId)) {
-            throw new IllegalStateException("Cannot request participation in own event");
+            throw new ConflictException("Cannot request participation in own event");
         }
-        if (!event.getState().equals(EventState.PUBLISHED)) {
-            throw new IllegalStateException("Event is not published");
+        if (event.getState() != EventState.PUBLISHED) {
+            throw new ConflictException("Event is not published");
         }
         if (requestRepository.findByEventAndRequester(event, user).isPresent()) {
-            throw new IllegalStateException("Request already exists");
+            throw new ConflictException("Request already exists");
         }
         if (event.getParticipantLimit() != 0 &&
                 requestRepository.countByEventAndStatus(event, RequestStatus.CONFIRMED) >= event.getParticipantLimit()) {
-            throw new IllegalStateException("Participant limit reached");
+            throw new ConflictException("Participant limit reached");
         }
+
+        RequestStatus status = (event.getParticipantLimit() == 0 || Boolean.FALSE.equals(event.getRequestModeration()))
+                ? RequestStatus.CONFIRMED
+                : RequestStatus.PENDING;
 
         ParticipationRequest request = ParticipationRequest.builder()
                 .event(event)
                 .requester(user)
-                .created(LocalDateTime.now())
-                .status(event.getRequestModeration() ? RequestStatus.PENDING : RequestStatus.CONFIRMED)
+                .created(LocalDateTime.now().truncatedTo(ChronoUnit.MILLIS))
+                .status(status)
                 .build();
 
         return RequestMapper.toDto(requestRepository.save(request));
@@ -62,14 +100,14 @@ public class ParticipationRequestServiceImpl implements ParticipationRequestServ
     @Transactional
     public ParticipationRequestDto cancel(Long userId, Long requestId) {
         ParticipationRequest request = requestRepository.findById(requestId)
-                .orElseThrow(() -> new NoSuchElementException("Request not found"));
+                .orElseThrow(() -> new NotFoundException("Request not found"));
 
         if (!request.getRequester().getId().equals(userId)) {
-            throw new IllegalArgumentException("Cannot cancel someone else's request");
+            throw new ConflictException("Cannot cancel someone else's request");
         }
 
         request.setStatus(RequestStatus.CANCELED);
-        return RequestMapper.toDto(request);
+        return RequestMapper.toDto(requestRepository.save(request));
     }
 
     @Override
@@ -77,18 +115,17 @@ public class ParticipationRequestServiceImpl implements ParticipationRequestServ
         User user = getUser(userId);
         return requestRepository.findAllByRequester(user).stream()
                 .map(RequestMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<ParticipationRequestDto> getEventRequests(Long userId, Long eventId) {
         Event event = getEvent(eventId);
-        if (!event.getInitiator().getId().equals(userId)) {
-            throw new IllegalArgumentException("Only initiator can view requests for this event");
-        }
+        requireInitiator(event, userId, "view requests for this event");
+
         return requestRepository.findAllByEvent(event).stream()
                 .map(RequestMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -96,20 +133,22 @@ public class ParticipationRequestServiceImpl implements ParticipationRequestServ
     public ParticipationRequestDto confirmRequest(Long userId, Long eventId, Long reqId) {
         Event event = getEvent(eventId);
         ParticipationRequest request = requestRepository.findById(reqId)
-                .orElseThrow(() -> new NoSuchElementException("Request not found"));
+                .orElseThrow(() -> new NotFoundException("Request not found"));
 
-        if (!event.getInitiator().getId().equals(userId)) {
-            throw new IllegalArgumentException("Only initiator can confirm requests");
-        }
+        requireInitiator(event, userId, "confirm requests");
         if (!request.getEvent().getId().equals(eventId)) {
-            throw new IllegalArgumentException("Request does not belong to event");
+            throw new ConflictException("Request does not belong to event");
         }
         if (event.getParticipantLimit() != 0 &&
                 requestRepository.countByEventAndStatus(event, RequestStatus.CONFIRMED) >= event.getParticipantLimit()) {
-            throw new IllegalStateException("Participant limit reached");
+            throw new ConflictException("Participant limit reached");
         }
 
         request.setStatus(RequestStatus.CONFIRMED);
+        requestRepository.save(request);
+
+        refreshConfirmedCount(event);
+
         return RequestMapper.toDto(request);
     }
 
@@ -118,26 +157,68 @@ public class ParticipationRequestServiceImpl implements ParticipationRequestServ
     public ParticipationRequestDto rejectRequest(Long userId, Long eventId, Long reqId) {
         Event event = getEvent(eventId);
         ParticipationRequest request = requestRepository.findById(reqId)
-                .orElseThrow(() -> new NoSuchElementException("Request not found"));
+                .orElseThrow(() -> new NotFoundException("Request not found"));
 
-        if (!event.getInitiator().getId().equals(userId)) {
-            throw new IllegalArgumentException("Only initiator can reject requests");
-        }
+        requireInitiator(event, userId, "reject requests");
         if (!request.getEvent().getId().equals(eventId)) {
-            throw new IllegalArgumentException("Request does not belong to event");
+            throw new ConflictException("Request does not belong to event");
         }
 
         request.setStatus(RequestStatus.REJECTED);
-        return RequestMapper.toDto(request);
+        return RequestMapper.toDto(requestRepository.save(request));
     }
 
-    private User getUser(Long userId) {
-        return userRepository.findById(userId)
-                .orElseThrow(() -> new NoSuchElementException("User not found"));
-    }
+    @Override
+    @Transactional
+    public RequestStatusUpdateResult updateRequestsStatus(Long userId, Long eventId, RequestStatusUpdateDto updateDto) {
+        Event event = getEvent(eventId);
+        requireInitiator(event, userId, "update requests");
 
-    private Event getEvent(Long eventId) {
-        return eventRepository.findById(eventId)
-                .orElseThrow(() -> new NoSuchElementException("Event not found"));
+        if (!Boolean.TRUE.equals(event.getRequestModeration()) || event.getParticipantLimit() == 0) {
+            throw new ConflictException("Request moderation is disabled or no participant limit");
+        }
+
+        List<ParticipationRequest> requests = requestRepository.findAllById(updateDto.getRequestIds());
+        if (requests.isEmpty()) {
+            return RequestStatusUpdateResult.builder()
+                    .confirmedRequests(List.of())
+                    .rejectedRequests(List.of())
+                    .build();
+        }
+
+        RequestStatus target = parseBulkStatus(updateDto.getStatus());
+
+        List<ParticipationRequestDto> confirmed = new ArrayList<>();
+        List<ParticipationRequestDto> rejected = new ArrayList<>();
+
+        for (ParticipationRequest req : requests) {
+            if (!req.getEvent().getId().equals(eventId)) {
+                throw new ConflictException("Request does not belong to this event");
+            }
+            if (req.getStatus() != RequestStatus.PENDING) {
+                throw new ConflictException("Only pending requests can be updated");
+            }
+
+            if (target == RequestStatus.CONFIRMED) {
+                long confirmedCount = requestRepository.countByEventAndStatus(event, RequestStatus.CONFIRMED);
+                if (event.getParticipantLimit() != 0 && confirmedCount >= event.getParticipantLimit()) {
+                    throw new ConflictException("Cannot confirm request: participant limit reached");
+                }
+                req.setStatus(RequestStatus.CONFIRMED);
+                confirmed.add(RequestMapper.toDto(requestRepository.save(req)));
+            } else if (target == RequestStatus.REJECTED) {
+                req.setStatus(RequestStatus.REJECTED);
+                rejected.add(RequestMapper.toDto(requestRepository.save(req)));
+            } else {
+                throw new ConflictException("Unsupported bulk status: " + target);
+            }
+        }
+
+        refreshConfirmedCount(event);
+
+        return RequestStatusUpdateResult.builder()
+                .confirmedRequests(confirmed)
+                .rejectedRequests(rejected)
+                .build();
     }
 }
